# strawberry

./: .env  .gitignore  .graphqlrc  README.md  pyproject.toml  pytest.ini  requirements.txt  schema.py
app/: admin.py  apps.py  inputs.py  models.py  mutations.py  queries.py  scalars.py  schema.py  subscriptions.py  types.py
app/fixtures/: app.json  color.json  fruit.json
app/graphqls/: fragments.graphql  queries.graphql
app/migrations/: 0001_initial.py  0002_fruit_wiki_urls.py  0003_fruit_create_time.py  0004_rename_create_time_fruit_created_at.py  0005_fruit_updated_at_alter_fruit_created_at.py  0006_history.py  0007_alter_history_output.py  0008_delete_history.py
docs/: pipx.md  poetry.md  pytest.md  strawberry-graphql-django.md  strawberry-graphql.md
docs/jupyter/: exporting.md
docs/pydantic/: configuration.ipynb  configuration.md  errors.ipynb  errors.md  exceptions.py  fields.md  models.ipynb  models.md  mypy.md  validators.md
docs/pydantic/concepts/: fields.ipynb  models.ipynb  validators.ipynb
docs/strawberry/: README.md  faq.md  index.md  pydantic.ipynb
docs/strawberry-django/: index.md
docs/strawberry-django/guide/: views.md
docs/strawberry/integrations/: django.md  pydantic.ipynb  pydantic.md
my_pydantic/: apps.py  exceptions.py  inputs.py  models.py  mutations.py  queries.py  scalars.py  schema.py  tests.py  types.py
my_pydantic/graphqls/: mutations.graphql  queries.graphql
my_pydantic/pydantic/: models.py  types.py
my_pydantic/tests/: conftest.py  test_pydantic.py  test_pydantic_models.py  test_pydantic_types.py  test_schema.py
project/: asgi.py  schema.py  settings.py  urls.py
utils/management/commands/: export_schema_plus.py
utils/strawberry_django/fields/: field.py
